# Yadro_project

./: CMakeLists.txt  README.md  club.cpp  club.h  main.cpp
